<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_title"
        android:textAppearance="?textAppearanceHeadline3"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name"
            android:inputType="textEmailAddress"
            android:imeOptions="actionNext"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/create_name_hint" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/city_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/name_container">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/city"
            android:inputType="text|textCapWords"
            android:imeOptions="actionDone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/create_city_hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/create_profile_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/create_profile_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/city_container" />

</androidx.constraintlayout.widget.ConstraintLayout>